--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            transition: background-color 0.6s ease, color 0.6s ease;
         }
 
         header {
@@ -22,6 +23,9 @@
         nav {
             background-color: #555;
             padding: 0.5em;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         nav a {
@@ -45,10 +49,15 @@
             width: 100%;
         }
 
+        #switchContainer {
+            position: fixed;
+            top: 0;
+            right: 0;
+            margin: 10px;
+        }
+
         iframe {
-            width: 100%;
-            height: 500px; /* Adjust the height as needed */
-            border: none;
+            display: none;
         }
     </style>
 </head>
@@ -61,26 +70,43 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
-        <a href="#" onclick="toggleSwitch()">Switch</a>
+        <div id="switchContainer">
+            <label class="switch">
+                <input class="switch__input" type="checkbox" role="switch" name="dark" onchange="toggleColors()" />
+                <svg class="switch__icon" width="24px" height="24px" aria-hidden="true">
+                    <use href="#light" />
+                </svg>
+                <svg class="switch__icon" width="24px" height="24px" aria-hidden="true">
+                    <use href="#dark" />
+                </svg>
+            </label>
+        </div>
         <a href="#">Contact</a>
     </nav>
 
     <section>
         <h2>Welcome to Our Website!</h2>
         <p>This is a simple HTML website. Customize it to meet your needs.</p>
-
-        <!-- Add an iframe to embed switch.html content -->
-        <iframe id="switchFrame" src="switch.html" style="display: none;"></iframe>
     </section>
 
     <footer>
         &copy; 2023 Your Website Name. All rights reserved.
     </footer>
 
+    <iframe id="switchFrame" src="switch.html"></iframe>
+
     <script>
-        function toggleSwitch() {
+        function toggleColors() {
+            var body = document.body;
             var switchFrame = document.getElementById('switchFrame');
-            switchFrame.style.display = (switchFrame.style.display === 'none') ? 'block' : 'none';
+            
+            if (body.classList.contains('dark-mode')) {
+                body.classList.remove('dark-mode');
+                switchFrame.contentWindow.document.body.classList.remove('dark-mode');
+            } else {
+                body.classList.add('dark-mode');
+                switchFrame.contentWindow.document.body.classList.add('dark-mode');
+            }
         }
     </script>
 </body>
