--- a/index.html
+++ b/index.html
@@ -50,15 +50,61 @@
         }
 
         #switchContainer {
-            position: fixed;
-            top: 0;
-            right: 0;
-            margin: 10px;
+            display: flex;
+            align-items: center;
         }
 
-        iframe {
-            display: none;
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
         }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        input:checked + .slider {
+            background-color: #2196F3;
+        }
+
+        input:focus + .slider {
+            box-shadow: 0 0 1px #2196F3;
+        }
+
+        input:checked + .slider:before {
+            -webkit-transform: translateX(26px);
+            -ms-transform: translateX(26px);
+            transform: translateX(26px);
+        }
+
     </style>
 </head>
 <body>
@@ -72,14 +118,10 @@
         <a href="#">About</a>
         <div id="switchContainer">
             <label class="switch">
-                <input class="switch__input" type="checkbox" role="switch" name="dark" onchange="toggleColors()" />
-                <svg class="switch__icon" width="24px" height="24px" aria-hidden="true">
-                    <use href="#light" />
-                </svg>
-                <svg class="switch__icon" width="24px" height="24px" aria-hidden="true">
-                    <use href="#dark" />
-                </svg>
+                <input type="checkbox" onchange="toggleColors()">
+                <span class="slider"></span>
             </label>
+            <span>Dark Mode</span>
         </div>
         <a href="#">Contact</a>
     </nav>
@@ -93,19 +135,14 @@
         &copy; 2023 Your Website Name. All rights reserved.
     </footer>
 
-    <iframe id="switchFrame" src="switch.html"></iframe>
-
     <script>
         function toggleColors() {
             var body = document.body;
-            var switchFrame = document.getElementById('switchFrame');
-            
+
             if (body.classList.contains('dark-mode')) {
                 body.classList.remove('dark-mode');
-                switchFrame.contentWindow.document.body.classList.remove('dark-mode');
             } else {
                 body.classList.add('dark-mode');
-                switchFrame.contentWindow.document.body.classList.add('dark-mode');
             }
         }
     </script>
