--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            color: #333;
             transition: background-color 0.6s ease, color 0.6s ease;
         }
 
@@ -52,6 +53,7 @@
         #switchContainer {
             display: flex;
             align-items: center;
+            margin-right: 10px;
         }
 
         .switch {
@@ -77,6 +79,7 @@
             background-color: #ccc;
             -webkit-transition: .4s;
             transition: .4s;
+            border-radius: 34px;
         }
 
         .slider:before {
@@ -89,6 +92,7 @@
             background-color: white;
             -webkit-transition: .4s;
             transition: .4s;
+            border-radius: 50%;
         }
 
         input:checked + .slider {
